# dClimate-Zarr-Client

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
dclimate_zarr_client/: __init__.py  cids.json  client.py  dclimate_zarr_errors.py  encryption_codec.py  geo_temporal_utils.py  geo_utils.py  geotemporal_data.py  ipfs_retrieval.py  ipfs_zarr_retrieval.py  s3_retrieval.py  zarr_metadata.py
src/: __init__.py  client.py  dclimate_zarr_errors.py  encryption_codec.py  geotemporal_data.py  ipfs_retrieval.py  s3_retrieval.py  zarr_metadata.py
test/: conftest.py  test_client.py  test_geo_funcs.py  test_ipfs_retrieval.py  test_s3_retrieval.py  test_zarr_metadata.py
test/data/zarr-dev/metadata/: Arbol Data Catalog.json  Arbol Empty Data Catalog.json
test/data/zarr-dev/metadata/collections/: CHIRPS.json
test/etc/: central_northern_ca_counties.dbf  northern_ca_counties.dbf  northern_ca_counties.shp  northern_ca_counties.shx
test/etc/retrieval_test.zarr/: .zattrs  .zmetadata
test/etc/retrieval_test.zarr/latitude/: .zarray  0
test/etc/retrieval_test.zarr/longitude/: .zarray
test/etc/retrieval_test.zarr/u100/: .zarray  0.0.0  0.0.10  0.0.12  0.0.2  0.0.3  0.0.4  0.0.7  0.1.0  0.1.10  0.1.11  0.1.12  0.1.5  0.1.6  0.1.7  0.1.9  0.2.0  0.2.1  0.2.10  0.2.11  0.2.12  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.2.8  0.2.9  1.0.0  1.0.10  1.0.12  1.0.2  1.0.4  1.0.6  1.0.7  1.0.9  1.1.0  1.1.11  1.1.12  (+83 more)
test/etc/sample_zarrs/bafyreibh56lc4n5mqaj25m7q5dkcwda7qt5hyygd7vu32idupejaoan2li.zarr/: .zattrs  .zmetadata
test/etc/sample_zarrs/bafyreibh56lc4n5mqaj25m7q5dkcwda7qt5hyygd7vu32idupejaoan2li.zarr/time/: 1
test/etc/sample_zarrs/bafyreibh56lc4n5mqaj25m7q5dkcwda7qt5hyygd7vu32idupejaoan2li.zarr/u100/: .zarray  0
test/etc/sample_zarrs/bafyreicbu5gbtj5kgyzf2qmsvqhlog7fj5yrnksjqmkqmcinn2yrcsaynq.zarr/: .zattrs  .zmetadata
test/etc/sample_zarrs/bafyreicbu5gbtj5kgyzf2qmsvqhlog7fj5yrnksjqmkqmcinn2yrcsaynq.zarr/longitude/: .zattrs
test/etc/sample_zarrs/bafyreicbu5gbtj5kgyzf2qmsvqhlog7fj5yrnksjqmkqmcinn2yrcsaynq.zarr/u100/: 0
test/etc/sample_zarrs/bafyreiccejigv2gura4mqitpnrfg2moarvjx4jrcgkompqeuzpejhtc4ra.zarr/: .zattrs  .zmetadata
test/etc/sample_zarrs/bafyreiccejigv2gura4mqitpnrfg2moarvjx4jrcgkompqeuzpejhtc4ra.zarr/u100/: .zarray  0
test/etc/sample_zarrs/bafyreiglm3xvfcwkjbdqlwg3mc6zgngxuyfj6tkgfb6qobtmlzobpp63sq.zarr/: .zattrs  .zmetadata
test/etc/sample_zarrs/bafyreiglm3xvfcwkjbdqlwg3mc6zgngxuyfj6tkgfb6qobtmlzobpp63sq.zarr/longitude/: 0
test/etc/sample_zarrs/bafyreiglm3xvfcwkjbdqlwg3mc6zgngxuyfj6tkgfb6qobtmlzobpp63sq.zarr/time/: .zarray
test/etc/sample_zarrs/bafyreiglm3xvfcwkjbdqlwg3mc6zgngxuyfj6tkgfb6qobtmlzobpp63sq.zarr/u100/: .zarray  .zattrs  0.0.1  0.0.11  0.0.12  0.0.5  0.0.6  0.0.8  0.0.9  0.1.1  0.1.12  0.1.2  0.1.3  0.1.4  0.1.8  0.2.0  0.2.1  0.2.10  0.2.11  0.2.12  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.2.8  0.2.9  1.0.1  1.0.11  1.0.12  1.0.3  1.0.5  1.0.8  1.1.1  1.1.10  1.1.12  1.1.2  1.1.4  1.1.5  (+80 more)
test/etc/sample_zarrs/bafyreiheqhx2wbdx5p3mbxeawlif7g72ixfgwoonuy3bhghsodc45xwjbi.zarr/: .zattrs  .zmetadata
test/etc/sample_zarrs/bafyreiheqhx2wbdx5p3mbxeawlif7g72ixfgwoonuy3bhghsodc45xwjbi.zarr/latitude/: .zattrs
test/etc/sample_zarrs/bafyreiheqhx2wbdx5p3mbxeawlif7g72ixfgwoonuy3bhghsodc45xwjbi.zarr/time/: .zarray  .zattrs  0
test/etc/sample_zarrs/bafyreiheqhx2wbdx5p3mbxeawlif7g72ixfgwoonuy3bhghsodc45xwjbi.zarr/u100/: .zattrs  0
tests/: conftest.py  test_client.py  test_geo_funcs.py  test_geotemporal_data.py  test_ipfs_retrieval.py  test_publish_encrypted_CID.py  test_s3_retrieval.py  test_zarr_encryption_ipfs.py  test_zarr_metadata.py
tests/data/zarr-dev/metadata/: Data Catalog.json  Empty Data Catalog.json
tests/etc/: central_northern_ca_counties.geojson  central_northern_ca_counties.shp  central_northern_ca_counties.shx  northern_ca_points.geojson
