# pyproject.toml
[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "dclimate_zarr_client"
dynamic = ["version"]
authors = [
    { name = "Evan Schechter", email = "evan@arbol.io" },
    { name = "Chris Rossi", email = "chris@christophermrossi.com" },
    { name = "Robert Banick", email = "robert.banick@arbol.io" },
]
requires-python = ">=3.12"
dependencies = [
    "aiobotocore",
    "xarray==2024.11.0",
    "rioxarray",
    "zarr==2.18.3",
    "numpy",
    "py_hamt @ git+https://github.com/dClimate/py-hamt@main",
    "requests",
    "pyarrow",
    "geopandas",
    "pandas",
    "s3fs",
    "shapely",
    "scipy",
]

[project.urls]
Homepage = "https://dclimate.net/"

[tool.black]
line-length = 119

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "nox"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "_version.py"

[tool.setuptools.package-data]
"*" = ["py.typed", "*.json"]

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.flake8]
# flake8 and black disagree on E203 and W503
ignore = "E203 W503"
exclude = ".nox"
max-line-length = 120
