# pyproject.toml

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "dclimate_zarr_client"
version = "0.1.0" # Set a static version or handle it in versioning strategy
authors = [
    { name = "Evan Schechter", email = "evan@arbol.io" },
    { name = "Chris Rossi", email = "chris@christophermrossi.com" },
    { name = "Robert Banick", email = "robert.banick@arbol.io" },
]
requires-python = ">=3.12"
dependencies = [
    "aiobotocore",
    "xarray==2024.11.0",
    "rioxarray",
    "zarr==2.18.3",
    "numpy>=2.1.3",
    "py_hamt @ git+https://github.com/dClimate/py-hamt@main",
    "requests",
    "pyarrow",
    "geopandas",
    "pandas",
    "s3fs",
    "shapely",
    "scipy",
]

[project.urls]
Homepage = "https://dclimate.net/"

[tool.black]
line-length = 119

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "pytest-mock"]
dev = ["black", "flake8", "flake8-pyproject", "nox"]

[tool.flake8]
# flake8 and black disagree on E203 and W503
ignore = "E203 W503"
exclude = ".nox"
max-line-length = 120
