# pyproject.toml

[build-system]
requires = ["pdm-backend==2.4.3"]
build-backend = "pdm.backend"

[project]
name = "dclimate_zarr_client"
version = "0.1.0" # Set a static version or handle it in versioning strategy
authors = [
    { name = "Evan Schechter", email = "evan@arbol.io" },
    { name = "Chris Rossi", email = "chris@christophermrossi.com" },
    { name = "Robert Banick", email = "robert.banick@arbol.io" },
]
requires-python = ">=3.12"
dependencies = [
    "aiobotocore",
    "xarray==2024.11.0",
    "rioxarray",
    "zarr==2.18.3",
    "numpy>=2.1.3",
    "py_hamt @ git+https://github.com/dClimate/py-hamt@v2.2.0",
    "requests",
    "pyarrow",
    "geopandas",
    "pandas",
    "s3fs",
    "shapely",
    "scipy",
    "pycryptodome>=3.21.0",
]

[project.urls]
Homepage = "https://dclimate.net/"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "pytest-mock"]
dev = []

[tool.uv]
dev-dependencies = ["pre-commit>=4.1.0", "ruff>=0.9.5"]
