

# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

#TODO fill in metadata

[options]
packages = find:
python_requires = >=3.10
install_requires =
    xarray
    rioxarray
    zarr
    numpy
    ipldstore @ git+https://github.com/dClimate/ipldstore@main
    requests
    geopandas
    s3fs
    scipy

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
dev =
    black
    flake8
    nox

[options.package_data]
* = py.typed, *.json

[options.packages.find]
exclude = test

[flake8]
max-line-length = 119

[tool.black]
line-length = 119
